# game_engine

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.VSCodeCounter/2024-04-16_10-49-10/: details.md  diff-details.md  diff.md  results.md
assets/: circle_sdf_frag.glsl  rect_sdf_frag.glsl  santi3.txt  sdf_frag.glsl  segment_sdf_frag.glsl  triangle_sdf_frag.glsl  union_sdf_frag.glsl
assets/shader/: render_sdftext_frag.glsl
purple/: CMakeLists.txt
purple/include/: application.h  purple.h  purple_ui.h  utils.h
purple/include/audio/: audio.h
purple/include/input/: input_common.h  input_manager.h
purple/include/render/: common.h  render.h  shader.h  text_render.h  texture.h
purple/include/render/cmd/: cmd_text.h  cmd_text_sdf.h
purple/include/resource/: asset_manager.h
purple/include/ui/: color.h  colum_container.h  container.h  img.h  row_container.h  stack_container.h  text.h  ui.h  ui_root.h  ui_text.h  widget.h
purple/include/widget/: timer.h
purple/src/: application.cpp  glad.cpp  glades.cpp  purple.cpp
purple/src/audio/: audio.cpp
purple/src/input/: input_manager.cpp
purple/src/render/: command.cpp  render.cpp  render_batch.cpp  shader.cpp  text_render.cpp  texture.cpp
purple/src/render/cmd/: cmd_text.cpp  cmd_text_sdf.cpp
purple/src/resource/: asset_manager.cpp
purple/src/ui/: color.cpp  colum_container.cpp  container.cpp  img.cpp  row_container.cpp  stack_container.cpp  text.cpp  ui.cpp  ui_root.cpp  ui_text.cpp  widget.cpp
purple/src/widget/: timer.cpp
sandbox/: CMakeLists.txt  application.cpp  application.h  common.h  main.cpp  test1_app.cpp  test1_app.h  test_render_text.cpp  test_render_text.h  test_ui.cpp  test_ui.h  test_ui_img.cpp  test_ui_img.h  test_ui_text.cpp  test_ui_text.h
sandbox_android/app/: build.gradle
sandbox_android/app/src/main/cpp/: AndroidApplication.cpp  AndroidApplication.h  CMakeLists.txt  bridge.cpp
sandbox_android/app/src/main/java/panyi/xyz/textrender/: MainActivity.java  NativeBridge.java
sandbox_android/app/src/main/res/values/: strings.xml
test/: CMakeLists.txt  format_test.cc  purple_colum_container_test.cpp  purple_input_test.cpp  purple_json_test.cpp  purple_row_container_test.cpp  purple_stack_container_test.cpp  purple_ui_test.cpp  purple_util_test.cpp
vender/: vender.md
vender/panlib/: CMakeLists.txt  pan.cpp  pan.h
